build: update to 2.4.3
change java version to 1.8